# pysofa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
pysofa/: __init__.py
sofascore/: __init__.py  adapters.py
tests/: test_pysofa.py  test_sofascore.py
