[tool.poetry]
name = "sofascore"
version = "1.0.0"
description = ""
authors = ["shimst3r <shimst3r@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.5"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
h5py = "^3.3.0"
jupyterlab = "^3.0.16"
mypy = "^0.910"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
